# mundosvirtuales-BanknoteClassifier

./: .gitignore  .gitmodules  CMakeLists.txt  config.pfs  generate.bat
Config/: 2019-02-21.pfs  2019-02-26.pfs  NodeMap.pfs  NodeMap2.pfs  acA2040-90uc_22313646.pfs  calibrationSettings.xml  cameraCalibration1.yml  cameraCalibration2.yml  cameraConfig.xml  cameraPose.yml  cameracalibration.xml  correctorCameraSettings.cfg  cubo.txt  cubo.xml  detector_params.yml  fieldDimensions.xml  in_VID5.xml  modules.cfg  modules_db.cfg  modules_real.cfg  nicoconfig.pfs  processes.cfg  prosegur_test.pfs  robotsIdentifiers.xml  settings.xml  teams.xml  ubuntu_config.pfs  video.xml
Config/Darknet/cfg/: objProducts.names  products.data  yolov3-tiny-products.cfg
Config/LibTorch/: areaNet.pt  billetatorSegmentor.pt
Data/keypoints/: ckp10000_Cara.yaml  ckp10000_Sello.yaml  ckp1000_Cara.yaml  ckp1000_Sello.yaml  ckp2000_Cara.yaml  ckp2000_Sello.yaml  ckp5000_Cara.yaml  ckp5000_Sello.yaml  kp10000_Cara.txt  kp10000_Sello.txt  kp1000_Cara.txt  kp1000_Sello.txt  kp2000_Cara.txt  kp2000_Sello.txt  kp210000_Cara.txt  kp210000_Sello.txt  kp21000_Cara.txt  kp21000_Sello.txt  kp22000_Cara.txt  kp22000_Sello.txt  kp25000_Cara.txt  kp25000_Sello.txt  kp310000_Cara.txt  kp31000_Cara.txt  kp31000_Sello.txt  kp32000_Sello.txt  kp35000_Cara.txt  kp3_CINCO_S.txt  kp3_DIEZ_S.txt  kp3_DOS_C.txt  kp5000_Cara.txt  kp5000_Sello.txt
Data/templates/: CINCO_C.xcf  CINCO_S.xcf  DIEZ_C.xcf  DIEZ_S.xcf  DOS_C.xcf  DOS_S.xcf  UNO_C.xcf  UNO_S.xcf  VEINTE_C.xcf  VEINTE_S.xcf
Java/EthernetIPFanuc/: .gitignore  .project  configServer.json  pom.xml
Java/EthernetIPFanuc/src/: ClientRobotFanuc.java  ClientRobotFanucCloseListener.java  CommandEthernetIPFanuc.java  EthernetIPFanuc.java  GetAttributeSingleServiceFanuc.java  PacketEthernetIPFanuc.java  PositionRegisterCartesian.java  PositionRegisterJoint.java  ProcessPacket.java  SetAttributeSingleServiceFanuc.java
Python/: PythonToC++.py  banknote_detect._original.py  banknote_detect.py  banknote_train.py  train2.py
Python/GRG/: Diagrama_clientePython.graphml  Diagrama_robot.graphml  __init__.py  grg_class.py  grg_com.py  grg_functions.py  grg_variables.py  main.py  test.py
Utils/CalibratorTool/: BanknoteClassifierWrapper.cpp  BanknoteClassifierWrapper.h  CalibratorTool.h  CalibratorTool.qrc  CalibratorToolCtrl.cpp  CalibratorToolCtrl.h  ConsoleController.cpp  ConsoleController.h  Controller.cpp  Controller.h  GroundTruthWrapper.cpp  GroundTruthWrapper.h  ListViewsDockWidget.cpp  ListViewsDockWidget.h  LocalRobot.cpp  LocalRobot.h  Main.cpp  MainWindow.cpp  MainWindow.h  RegisteredDockWidget.cpp  RegisteredDockWidget.h  RobotConsole.cpp  RobotConsole.h  Synchronization.h  mainwindow.ui
Utils/CalibratorTool/Representations/: ModuleInfo.cpp  ModuleInfo.h  TimeInfo.cpp
Utils/CalibratorTool/Views/: ConsoleView.cpp  ConsoleView.h  ImageView.cpp  ImageView.h  StatusView.cpp  StatusView.h  TimeView.cpp  TimeView.h
Utils/CalibratorTool/Visualization/: DebugDrawing.cpp  DebugDrawing.h  PaintMethods.cpp  PaintMethods.h
Utils/CameraCalibration/: calibration.cpp  settings.h
Utils/FieldCalibrator/: fieldCalibrator.cpp
Utils/VisionTool/: CommunicationHandler.cpp  CommunicationHandler.h  Main.cpp  MainWindow.cpp  MainWindow.h  VisionTool.cpp  VisionTool.h  VisionToolWidget.cpp  VisionToolWidget.h
Utils/darknet/include/: darknet.h
src/: BackgroundModel.cpp  BackgroundModel.h  CarsModel.cpp  CarsModel.h  ColorModel.cpp  ColorModel.h  ColorModelConversions.h  Line.cpp  Line.h  Object.cpp  Object.h  Range.h  Vector2.h  main.cpp
src/ColorModel/: ColorModel.cpp  ColorModel.h  ColorRangeCreator.h
src/Modules/: ArucoPoseEstimator.cpp  ArucoPoseEstimator.h  BackgroundModel.cpp  BackgroundModel.h  BallPerceptor.cpp  BallPerceptor.h  BanknoteClassifierConfiguration.cpp  BanknoteClassifierConfiguration.h  BanknoteClassifierProvider.cpp  BanknoteClassifierProvider.h  BanknoteDetector.cpp  BanknoteDetector.h  BanknotePositionProvider.cpp  BanknotePositionProvider.h  BanknoteTracker.cpp  BanknoteTracker.h  BlobFilter.cpp  BlobFilter.h  BlobProvider.cpp  BlobProvider.h  Camera.cpp  Camera.h  CameraPoseFilter.cpp  CameraPoseFilter.h  CameraPoseProvider.cpp  CameraPoseProvider.h  CameraProvider.cpp  CameraProvider.h  CustomCommunication.cpp  CustomCommunication.h  DummyImages.cpp  DummyImages.h  Equalizer.cpp  Equalizer.h  EstimatePosition.cpp  EstimatePosition.h  FeaturesProvider.cpp  FeaturesProvider.h  GrayImageProvider.cpp  GrayImageProvider.h  (+34 more)
src/Modules/Corrector/: BanknoteCorrectorConfiguration.cpp  BanknoteCorrectorConfiguration.h  (+4 more)
src/Platform/: Camera.cpp  Camera.h  DebugHandler.h  File.cpp  File.h  Memory.h  Time.cpp
src/Processes/: BanknoteClassifier.cpp  BanknoteClassifier.h  BanknoteCorrector.cpp  BanknoteCorrector.h  Debug.cpp  Debug.h  GripperCommunication.cpp  GripperCommunication.h  GroundTruth.cpp  GroundTruth.h  Segmentation.cpp  Segmentation.h  main.cpp  mainGripperComm.cpp
src/Representations/: BallPerception.cpp  BallPerception.h  BanknoteClassifierMessages.h  BanknoteDetectionParameters.h  BanknoteDetections.cpp  BanknoteDetections.h  BanknoteModel.h  BanknotePosition.cpp  BanknotePosition.h  Blackboard.cpp  Blackboard.h  Blobs.cpp  Blobs.h  CameraInfo.cpp  CameraInfo.h  CameraSettings.cpp  CameraSettings.h  Classification.cpp  Classification.h  ErrorInfo.cpp  ErrorInfo.h  Features.cpp  Features.h  FieldDimensions.cpp  FieldDimensions.h  FrameInfo.h  GpuImage.h  GrabbingPosition.cpp  GrabbingPosition.h  GroundTruthMessages.h  Image.cpp  Image.h  RegState.cpp  RegState.h  Regions.cpp  Regions.h  Representation.h  RobotFanuc.cpp  RobotFanuc.h  RobotFanucRegisters.cpp  (+12 more)
src/Tools/: AlignedMemory.cpp  ByteBuf.cpp  ByteBuf.h  ColorClasses.cpp  ColorClasses.h  ColorModelConversions.h  ColorRangeCreator.h  Enum.cpp  File.cpp  File.h  FunctionList.h  Global.cpp  Global.h  MessageIDs.h  Process.cpp  Process.h  Range.h  RingBuffer.h  Settings.cpp  Settings.h  Streamable.h  SystemCall.cpp  SystemCall.h  Transformation.cpp  Transformation.h  Vector2.h
(+170 files in other folders)
